--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
     background: #060608;
     position: absolute;
-    color: #fafafa;
+    color: #DADADA;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -15,11 +15,6 @@ body {
     flex-direction: column;
     align-items: center;
     transition: background 0.2s linear;
-}
-
-.change {
-    background: #D2DCF2;
-    color: #060608;
 }
 
 .container {
@@ -110,6 +105,10 @@ a {
     letter-spacing: 4px
 }
 
+a.red {
+    color: #fc00ff;
+}
+
 
 a:hover {
     background: #03e9f4;
@@ -119,6 +118,14 @@ a:hover {
         0 0 25px #03e9f4,
         0 0 50px #03e9f4,
         0 0 100px #03e9f4;
+}
+
+a.red:hover {
+    background: #fc00ff;
+    box-shadow: 0 0 5px #fc00ff,
+        0 0 25px #fc00ff,
+        0 0 50px #fc00ff,
+        0 0 100px #fc00ff;
 }
 
 a span {
@@ -133,6 +140,10 @@ a span:nth-child(1) {
     height: 2px;
     background: linear-gradient(90deg, transparent, #03e9f4);
     animation: btn-anim1 1s linear infinite;
+}
+
+a.red span:nth-child(1) {
+    background: linear-gradient(90deg, transparent, #fc00ff);
 }
 
 @keyframes btn-anim1 {
@@ -155,6 +166,10 @@ a span:nth-child(2) {
     animation-delay: .25s
 }
 
+a.red span:nth-child(2) {
+    background: linear-gradient(90deg, transparent, #fc00ff);
+}
+
 @keyframes btn-anim2 {
     0% {
         top: -100%;
@@ -173,6 +188,10 @@ a span:nth-child(3) {
     background: linear-gradient(270deg, transparent, #03e9f4);
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
+}
+
+a.red span:nth-child(3) {
+    background: linear-gradient(90deg, transparent, #fc00ff);
 }
 
 @keyframes btn-anim3 {
@@ -195,6 +214,10 @@ a span:nth-child(4) {
     animation-delay: .75s
 }
 
+a.red span:nth-child(4) {
+    background: linear-gradient(90deg, transparent, #fc00ff);
+}
+
 @keyframes btn-anim4 {
     0% {
         bottom: -100%;
@@ -213,7 +236,7 @@ a span:nth-child(4) {
 }
 
 body.dark {
-    background-color: #FAFAFA;
+    background-color: #DADADA;
 }
 
 .label {
